--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,6 +1,7 @@
 #app {
 
   .main-container {
+    background: #F7F8FA;
     min-height: 100%;
     transition: margin-left .28s;
     margin-left: $sideBarWidth;
