完善修订页面

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 // sidebar
 $menuText:#bfcbd9;
-$menuActiveText:#E6FAF7;
+$menuActiveText:#ECF5FF; //鼠标悬浮背景颜色
 $subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
 $menuBg:#304156;
